--- a/src/index.css
+++ b/src/index.css
@@ -641,7 +641,6 @@ button {
 .profileDetailsHeader {
   display: flex;
   justify-content: space-between;
-  max-width: 500px;
 }
 
 .personalDetailsText {
@@ -659,7 +658,6 @@ button {
   border-radius: 1rem;
   padding: 1rem;
   box-shadow: rgba(0, 0, 0, 0.2);
-  max-width: 500px;
 }
 
 .profileDetails {
@@ -703,7 +701,6 @@ button {
   box-shadow: rgba(0, 0, 0, 0.2);
   margin-top: 2rem;
   font-weight: 600;
-  max-width: 500px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -752,6 +749,7 @@ button {
 
 .flex {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .formInput,
